# textsummarization

./: .gitignore  README.md  chat_summarizer.py  config.yml  main.py  pyproject.toml  requirements.txt
research/: Bart_large_xsum_fine_tuned_samsum.ipynb  chat_summarization_finetune_model.ipynb  data_ingestion.ipynb
src/textsummarization/: config.py  constants.py  data_ingestion_component.py  data_ingestion_stage.py  entity.py  exception.py  logger.py  process_data.py  utils.py
